# nbx

./: .gitignore  README.md  pyproject.toml
nbx/: __init__.py  launcher.py  paths.py  preview.py
nbx/preview_templates/nbx-preview/: index.html.j2
nbx/preview_templates/nbx-preview/static/: preview.css
nbx/runtime_assets/jupyter-config/: jupyter_notebook_config.py.template  jupyter_server_config.py.template
nbx/runtime_assets/jupyter-config/custom/: custom.css
nbx/runtime_assets/jupyterlab-settings/@jupyter-notebook/application-extension/: top.jupyterlab-settings
nbx/runtime_assets/jupyterlab-settings/@jupyterlab/apputils-extension/: themes.jupyterlab-settings
nbx/runtime_assets/jupyterlab-settings/@jupyterlab/notebook-extension/: tracker.jupyterlab-settings
nbx/static/: nbx.js
nbx/templates/: notebooks.html
tests/: test_nbx.py
